# hotmart-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/hotmart_mcp/: __main__.py  client.py  config.py  exceptions.py  server.py  validators.py
src/hotmart_mcp/tools/: __init__.py  club.py  coupons.py  events.py  negotiation.py  products.py  sales.py  subscriptions.py
tests/: test_client.py  test_config.py  test_main.py  test_server.py  test_validators.py
tests/tools/: conftest.py  test_club.py  test_coupons.py  test_events.py  test_negotiation.py  test_products.py  test_sales.py  test_subscriptions.py  test_tools_init.py
